--- a/README.textile
+++ b/README.textile
@@ -158,6 +158,18 @@ files anywhere in your file tree to CSS (e.g. '/css/site.sass' will
 generate '/css/site.css'):
 
   $ jekyll --sass
+  
+h3. Haml
+
+To transform ".haml":http://github.com/nex3/haml/tree/master files to HTML
+(e.g. '/about.haml' will generate '/about.html'):
+
+  $ jekyll --haml
+
+Note that files must have a YAML metadata block at the top to be converted,
+and that Haml cannot currently be used for layouts -- only posts and pages.
+
+Haml content is intentionally not filtered, so you can use any Ruby code.
 
 h3. Local Server
 
@@ -251,8 +263,9 @@ h2. Data
 
 Jekyll traverses your site looking for files to process. Any files with YAML
 front matter (see below) are subject to processing. For each of these files,
-Jekyll makes a variety of data available to the pages via the Liquid
-templating system. The following is a reference of the available data.
+Jekyll makes a variety of data available to the pages via Haml (regular pages
+only) or the Liquid templating system. The following is a reference of the
+available data.
 
 h3. Global
 
