--- a/README.textile
+++ b/README.textile
@@ -288,6 +288,21 @@ h3. Site
 
   site.posts
     A reverse chronological list of all Posts.
+    
+  site.collated_posts
+    A nested hash by year, then month number, then day, then a list of Posts.
+    Suitable for post archives. You probably need to show these with Haml
+    since Liquid is too limited. For example:
+      - site.collated_posts.sort.reverse.each do |year,months|
+        %h2= year
+        - months.sort.reverse.each do |month,days|
+          %h3= Date::MONTHNAMES[month]
+          - days.sort.reverse.each do |day,posts|
+            %ol
+              - posts.each do |post|
+                %li
+                  %strong= "#{day}:"
+                  = link_to(h(post.title), post.url)
 
   site.related_posts
     If the page being processed is a Post, this contains a list of up to ten
