Option to cache Pygments output for faster re-rendering.
Re-rendering ~200 posts with highlighting in many of them went from ~90 seconds to ~3 seconds with caching.

--- a/README.textile
+++ b/README.textile
@@ -141,6 +141,12 @@ use that to make your code blocks look pretty. To activate Pygments support
 during the conversion:
 
   $ jekyll --pygments
+  
+Highlighting a blog post can take a second or two, and with a lot of posts,
+it adds up. You can tell Jekyll to cache pygments output in a directory for
+faster re-rendering:
+
+  $ jekyll --pygments-cache [PATH]
 
 h3. Markdown Processor
 
